--- a/SailScores.Web/Resources/Resources.SharedResource.sv-FI.resx
+++ b/SailScores.Web/Resources/Resources.SharedResource.sv-FI.resx
@@ -139,7 +139,7 @@
     <value>tävlande</value>
   </data>
   <data name="discards" xml:space="preserve">
-    <value>Borträknade</value>
+    <value>borträknade</value>
   </data>
   <data name="Helm" xml:space="preserve">
     <value>Skeppare</value>
@@ -215,5 +215,29 @@
   </data>
   <data name="Log out" xml:space="preserve">
     <value>Logga ut</value>
+  </data>
+  <data name="Regattas" xml:space="preserve">
+    <value>Regattor</value>
+  </data>
+  <data name="Updated" xml:space="preserve">
+    <value>Uppdaterad</value>
+  </data>
+  <data name="boats" xml:space="preserve">
+    <value>båtar</value>
+  </data>
+  <data name="String" xml:space="preserve">
+    <value>Konkurrenter</value>
+  </data>
+  <data name="String1" xml:space="preserve">
+    <value />
+  </data>
+  <data name="CapCompetitors" xml:space="preserve">
+    <value>Tävlande</value>
+  </data>
+  <data name="Results" xml:space="preserve">
+    <value>Resultat</value>
+  </data>
+  <data name="No results posted" xml:space="preserve">
+    <value>Inga färska resultat</value>
   </data>
 </root>
