Add account pages back in(Razor pages)

--- a/SailScores.Web/Resources/Resources.SharedResource.en-US.resx
+++ b/SailScores.Web/Resources/Resources.SharedResource.en-US.resx
@@ -142,7 +142,7 @@
     <value>discards</value>
   </data>
   <data name="Helm" xml:space="preserve">
-    <value>Helm</value>
+    <value>Skipper</value>
   </data>
   <data name="Log in" xml:space="preserve">
     <value>Log in</value>
