--- a/SailScores.Web/Resources/SharedResource.en-AU.resx
+++ b/SailScores.Web/Resources/SharedResource.en-AU.resx
@@ -231,4 +231,40 @@
   <data name="Updated" xml:space="preserve">
     <value>Updated</value>
   </data>
+  <data name="Regattas" xml:space="preserve">
+    <value>Regattas</value>
+  </data>
+  <data name="Change" xml:space="preserve">
+    <value>Change</value>
+  </data>
+  <data name="Abandoned" xml:space="preserve">
+    <value>Abandoned</value>
+  </data>
+  <data name="Admin" xml:space="preserve">
+    <value>Admin</value>
+  </data>
+  <data name="All Boats" xml:space="preserve">
+    <value>All Boats</value>
+  </data>
+  <data name="Boats Raced" xml:space="preserve">
+    <value>Boats Raced</value>
+  </data>
+  <data name="Classes" xml:space="preserve">
+    <value>Classes</value>
+  </data>
+  <data name="Club Admin" xml:space="preserve">
+    <value>Club Admin</value>
+  </data>
+  <data name="Club Stats" xml:space="preserve">
+    <value>Club Stats</value>
+  </data>
+  <data name="Default Scoring" xml:space="preserve">
+    <value>Default Scoring</value>
+  </data>
+  <data name="Description" xml:space="preserve">
+    <value>Description</value>
+  </data>
+  <data name="boats" xml:space="preserve">
+    <value>boats</value>
+  </data>
 </root>
