--- a/SailScores.Web/Resources/SharedResource.sv-FI.resx
+++ b/SailScores.Web/Resources/SharedResource.sv-FI.resx
@@ -118,210 +118,147 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="All Races" xml:space="preserve">
-    <value>Kaikki purjehdukset</value>
+    <value>Alla tävlingar</value>
   </data>
   <data name="All Series" xml:space="preserve">
-    <value>Kaikki sarjat</value>
+    <value>Alla serier</value>
   </data>
   <data name="Boat" xml:space="preserve">
-    <value>Vene</value>
+    <value>Båt</value>
   </data>
   <data name="Boat Name" xml:space="preserve">
-    <value>Veneen nimi</value>
+    <value>Båt namn</value>
   </data>
   <data name="Club Web Site" xml:space="preserve">
-    <value>Seuran kotisivut</value>
+    <value>Klubbens hemsida</value>
   </data>
   <data name="Competitor" xml:space="preserve">
-    <value>Kilpailija</value>
+    <value>Tävlande</value>
   </data>
   <data name="competitors" xml:space="preserve">
-    <value>kilpailijat</value>
+    <value>tävlande</value>
   </data>
   <data name="discards" xml:space="preserve">
-    <value>poisheitot</value>
+    <value>borträknade</value>
   </data>
   <data name="Helm" xml:space="preserve">
-    <value>Kippari</value>
+    <value>Skeppare</value>
   </data>
   <data name="Log in" xml:space="preserve">
-    <value>Kirjaudu</value>
+    <value>Logga in</value>
   </data>
   <data name="Name" xml:space="preserve">
-    <value>Nimi</value>
+    <value>Namn</value>
   </data>
   <data name="No Competitors" xml:space="preserve">
-    <value>Ei kilpailijoita</value>
+    <value>Inga deltagare</value>
   </data>
   <data name="No races" xml:space="preserve">
-    <value>Ei lähtöjä</value>
+    <value>Inga starter</value>
   </data>
   <data name="No recent races found." xml:space="preserve">
-    <value>No recent races found</value>
-    <comment>needed</comment>
+    <value>Inga färska resultat</value>
   </data>
   <data name="No recent series found." xml:space="preserve">
-    <value>Ei tuoreita tuloksia</value>
+    <value>Inga färska resultat</value>
   </data>
   <data name="No scheduled races found." xml:space="preserve">
-    <value>Suunniteltuja purjehdukset ei löytynyt.</value>
+    <value>Inga segling lopp hittades.</value>
   </data>
   <data name="Place" xml:space="preserve">
-    <value>Sijoitus</value>
+    <value>Placering</value>
   </data>
   <data name="Races" xml:space="preserve">
-    <value>Purjehdukset</value>
+    <value>Seglingar</value>
   </data>
   <data name="races sailed with" xml:space="preserve">
-    <value>kisaa purjehdittu joista</value>
+    <value>starter seglade med</value>
   </data>
   <data name="Recent Races" xml:space="preserve">
-    <value>Viimeisimmät kilpailut</value>
+    <value>Senaste tävlingar</value>
   </data>
   <data name="Recent Series" xml:space="preserve">
-    <value>Viimeisimmät sarjat</value>
+    <value>Senaste serier</value>
   </data>
   <data name="Sail" xml:space="preserve">
-    <value>Purje</value>
+    <value>Segel</value>
   </data>
   <data name="Sail Number" xml:space="preserve">
-    <value>Purje numero</value>
+    <value>Segelnummer</value>
   </data>
   <data name="Seasons" xml:space="preserve">
     <value>Seasons</value>
-    <comment>needed</comment>
   </data>
   <data name="Series" xml:space="preserve">
-    <value>Sarjat</value>
+    <value>Serier</value>
   </data>
   <data name="Total" xml:space="preserve">
-    <value>Yhteistulos</value>
+    <value>Totalt</value>
   </data>
   <data name="Upcoming Races" xml:space="preserve">
-    <value>Tulevt kilpailut</value>
+    <value>Kommande tävlingar</value>
   </data>
   <data name="Admin Page" xml:space="preserve">
-    <value>Ylläpitäjä sivu</value>
+    <value>Administratörs sida</value>
   </data>
   <data name="New Competitor" xml:space="preserve">
-    <value>Uusi osallistuja</value>
+    <value>Ny tävlande</value>
   </data>
   <data name="New Race" xml:space="preserve">
-    <value>Uusi kilpailu</value>
+    <value>Ny segling</value>
   </data>
   <data name="No seasons are set up." xml:space="preserve">
-    <value>No seasons are set up.</value>
-    <comment>needed</comment>
+    <value />
   </data>
   <data name="Scores" xml:space="preserve">
-    <value>Tulokset</value>
+    <value>Resultat</value>
   </data>
   <data name="CapCompetitors" xml:space="preserve">
-    <value>Kilpailijat</value>
+    <value>Tävlande</value>
   </data>
   <data name="Previous Day" xml:space="preserve">
-    <value>edelliseen päivään</value>
+    <value>föregående dag</value>
   </data>
   <data name="Previous Race" xml:space="preserve">
-    <value>edelliseen kilpailuun</value>
+    <value>tidigare race</value>
   </data>
   <data name="Previous Week" xml:space="preserve">
-    <value>edelliseen viikkoon</value>
+    <value>föregående vecka</value>
   </data>
   <data name="Rank change from" xml:space="preserve">
-    <value>Verrattuna</value>
+    <value>Rank förändring från</value>
   </data>
   <data name="Updated" xml:space="preserve">
-    <value>Päivitetty</value>
+    <value>Uppdaterad</value>
   </data>
   <data name="Log out" xml:space="preserve">
-    <value>Kirjaudu ulos</value>
+    <value>Logga ut</value>
   </data>
   <data name="Regattas" xml:space="preserve">
-    <value>Regatat</value>
+    <value>Regattor</value>
   </data>
   <data name="Results" xml:space="preserve">
-    <value>Tuloksia</value>
+    <value>Resultat</value>
   </data>
   <data name="No results posted" xml:space="preserve">
-    <value>Ei tuoreita tuloksia</value>
+    <value>Inga färska resultat</value>
   </data>
   <data name="Change" xml:space="preserve">
-    <value>Muutos</value>
+    <value>Förändring</value>
   </data>
   <data name="Abandoned" xml:space="preserve">
-    <value>Hylätty</value>
+    <value>Abandoned</value>
   </data>
   <data name="Admin" xml:space="preserve">
     <value>Admin</value>
-    <comment>needed</comment>
   </data>
   <data name="All Boats" xml:space="preserve">
-    <value>kaikki veneet</value>
+    <value>All Boats</value>
   </data>
   <data name="Boats Raced" xml:space="preserve">
-    <value>Veneet kilpailivat</value>
-  </data>
-  <data name="Classes" xml:space="preserve">
-    <value>Classes</value>
-    <comment>needed</comment>
-  </data>
-  <data name="Club Admin" xml:space="preserve">
-    <value>Club Admin</value>
-    <comment>needed</comment>
-  </data>
-  <data name="Club Stats" xml:space="preserve">
-    <value>Club Stats</value>
-    <comment>needed</comment>
-  </data>
-  <data name="Default Scoring" xml:space="preserve">
-    <value>Default Scoring</value>
-    <comment>needed</comment>
-  </data>
-  <data name="Description" xml:space="preserve">
-    <value>Kuvaus</value>
-  </data>
-  <data name="Edit Club Info" xml:space="preserve">
-    <value>Edit Club Info</value>
-    <comment>needed</comment>
-  </data>
-  <data name="Fleets" xml:space="preserve">
-    <value>Fleets</value>
-    <comment>needed</comment>
-  </data>
-  <data name="Inactive" xml:space="preserve">
-    <value>Toimimaton</value>
-  </data>
-  <data name="Manage Competitors" xml:space="preserve">
-    <value>Muokkaa Kilpailijoita</value>
-  </data>
-  <data name="New C;lass" xml:space="preserve">
-    <value>New Class</value>
-    <comment>needed</comment>
-  </data>
-  <data name="New Fleet" xml:space="preserve">
-    <value>New Fleet</value>
-    <comment>needed</comment>
-  </data>
-  <data name="New Season" xml:space="preserve">
-    <value>New Season</value>
-    <comment>needed</comment>
-  </data>
-  <data name="New Series" xml:space="preserve">
-    <value>Uusi Sarjat</value>
-  </data>
-  <data name="Scorekeepers" xml:space="preserve">
-    <value>Scorekeepers</value>
-    <comment>needed</comment>
-  </data>
-  <data name="Scoring Systems" xml:space="preserve">
-    <value>Scoring Systems</value>
-    <comment>needed</comment>
-  </data>
-  <data name="Top Series" xml:space="preserve">
-    <value>Huippusarja</value>
+    <value>Boats Raced</value>
   </data>
   <data name="boats" xml:space="preserve">
-    <value>boats</value>
+    <value>båtar</value>
   </data>
 </root>
