--- a/SailScores.Web/Resources/SharedResource.en-US.resx
+++ b/SailScores.Web/Resources/SharedResource.en-US.resx
@@ -118,135 +118,138 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="All Races" xml:space="preserve">
-    <value>Alla tävlingar</value>
+    <value>All Races</value>
   </data>
   <data name="All Series" xml:space="preserve">
-    <value>Alla serier</value>
+    <value>All Series</value>
   </data>
   <data name="Boat" xml:space="preserve">
-    <value>Båt</value>
+    <value>Boat</value>
   </data>
   <data name="Boat Name" xml:space="preserve">
-    <value>Båt namn</value>
+    <value>Boat Name</value>
   </data>
   <data name="Club Web Site" xml:space="preserve">
-    <value>Klubbens hemsida</value>
+    <value>Club Web Site</value>
   </data>
   <data name="Competitor" xml:space="preserve">
-    <value>Tävlande</value>
+    <value>Competitor</value>
   </data>
   <data name="competitors" xml:space="preserve">
-    <value>tävlande</value>
+    <value>competitors</value>
   </data>
   <data name="discards" xml:space="preserve">
-    <value>borträknade</value>
+    <value>discards</value>
   </data>
   <data name="Helm" xml:space="preserve">
-    <value>Skeppare</value>
+    <value>Sailor(s)</value>
   </data>
   <data name="Log in" xml:space="preserve">
-    <value>Logga in</value>
+    <value>Log in</value>
   </data>
   <data name="Name" xml:space="preserve">
-    <value>Namn</value>
+    <value>Name</value>
   </data>
   <data name="No Competitors" xml:space="preserve">
-    <value>Inga deltagare</value>
+    <value>No Competitors</value>
   </data>
   <data name="No races" xml:space="preserve">
-    <value>Inga starter</value>
+    <value>No races</value>
   </data>
   <data name="No recent races found." xml:space="preserve">
-    <value>Inga färska resultat</value>
+    <value>No recent races found</value>
   </data>
   <data name="No recent series found." xml:space="preserve">
-    <value>Inga färska resultat</value>
+    <value>No recent series found.</value>
   </data>
   <data name="No scheduled races found." xml:space="preserve">
-    <value>Inga segling lopp hittades.</value>
+    <value>No scheduled races found.</value>
   </data>
   <data name="Place" xml:space="preserve">
-    <value>Placering</value>
+    <value>Place</value>
   </data>
   <data name="Races" xml:space="preserve">
-    <value>Seglingar</value>
+    <value>Races</value>
   </data>
   <data name="races sailed with" xml:space="preserve">
-    <value>starter seglade med</value>
+    <value>races sailed with</value>
   </data>
   <data name="Recent Races" xml:space="preserve">
-    <value>Senaste tävlingar</value>
+    <value>Recent Races</value>
   </data>
   <data name="Recent Series" xml:space="preserve">
-    <value>Senaste serier</value>
+    <value>Recent Series</value>
   </data>
   <data name="Sail" xml:space="preserve">
-    <value>Segel</value>
+    <value>Sail</value>
   </data>
   <data name="Sail Number" xml:space="preserve">
-    <value>Segelnummer</value>
+    <value>Sail Number</value>
   </data>
   <data name="Seasons" xml:space="preserve">
     <value>Seasons</value>
   </data>
   <data name="Series" xml:space="preserve">
-    <value>Serier</value>
+    <value>Series</value>
   </data>
   <data name="Total" xml:space="preserve">
-    <value>Totalt</value>
+    <value>Total</value>
   </data>
   <data name="Upcoming Races" xml:space="preserve">
-    <value>Kommande tävlingar</value>
+    <value>Upcoming Races</value>
   </data>
   <data name="Admin Page" xml:space="preserve">
-    <value>Administratörs sida</value>
+    <value>Admin Page</value>
   </data>
   <data name="New Competitor" xml:space="preserve">
-    <value>Ny tävlande</value>
+    <value>New Competitor</value>
   </data>
   <data name="New Race" xml:space="preserve">
-    <value>Ny segling</value>
+    <value>New Race</value>
   </data>
   <data name="No seasons are set up." xml:space="preserve">
-    <value />
+    <value>No seasons are set up.</value>
   </data>
   <data name="Scores" xml:space="preserve">
-    <value>Resultat</value>
-  </data>
-  <data name="Log out" xml:space="preserve">
-    <value>Logga ut</value>
-  </data>
-  <data name="Regattas" xml:space="preserve">
-    <value>Regattor</value>
-  </data>
-  <data name="Updated" xml:space="preserve">
-    <value>Uppdaterad</value>
-  </data>
-  <data name="boats" xml:space="preserve">
-    <value>båtar</value>
+    <value>Scores</value>
   </data>
   <data name="CapCompetitors" xml:space="preserve">
-    <value>Tävlande</value>
-  </data>
-  <data name="Results" xml:space="preserve">
-    <value>Resultat</value>
-  </data>
-  <data name="No results posted" xml:space="preserve">
-    <value>Inga färska resultat</value>
-  </data>
-  <data name="Change" xml:space="preserve">
-    <value>Förändring</value>
+    <value>Competitors</value>
   </data>
   <data name="Previous Day" xml:space="preserve">
-    <value>föregående dag</value>
+    <value>previous day</value>
   </data>
   <data name="Previous Race" xml:space="preserve">
-    <value>tidigare race</value>
+    <value>previous race</value>
   </data>
   <data name="Previous Week" xml:space="preserve">
-    <value>föregående vecka</value>
+    <value>previous week</value>
   </data>
   <data name="Rank change from" xml:space="preserve">
-    <value>Rank förändring från</value>
+    <value>Rank change from</value>
+  </data>
+  <data name="Updated" xml:space="preserve">
+    <value>Updated</value>
+  </data>
+  <data name="Change" xml:space="preserve">
+    <value>Change</value>
+  </data>
+  <data name="Abandoned" xml:space="preserve">
+    <value>Abandoned</value>
+  </data>
+  <data name="Admin" xml:space="preserve">
+    <value>Admin</value>
+  </data>
+  <data name="All Boats" xml:space="preserve">
+    <value>All Boats</value>
+  </data>
+  <data name="Boats Raced" xml:space="preserve">
+    <value>Boats Raced</value>
+  </data>
+  <data name="Classes" xml:space="preserve">
+    <value>Classes</value>
+  </data>
+  <data name="boats" xml:space="preserve">
+    <value>boats</value>
   </data>
 </root>
