--- a/SailScores.Web/Resources/SharedResource.sr-Latn-RS.resx
+++ b/SailScores.Web/Resources/SharedResource.sr-Latn-RS.resx
@@ -118,150 +118,150 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Race" xml:space="preserve">
-    <value>[!! 🏁 Ŕâçé !!]</value>
+    <value>Race</value>
   </data>
   <data name="Scores" xml:space="preserve">
-    <value>[!! 📊 Šçõŕéŝ !!]</value>
+    <value>Scores</value>
   </data>
   <data name="New Race" xml:space="preserve">
-    <value>[!! ➕🏁 Ñéŵ Ŕâçé !!]</value>
+    <value>New Race</value>
   </data>
   <data name="Edit Club Info" xml:space="preserve">
-    <value>[!! ✏️🏛️ Éđïţ Ƈļûɓ Ìñƒõ !!]</value>
+    <value>Edit Club Info</value>
   </data>
   <data name="Club Web Site" xml:space="preserve">
-    <value>[!! 🌐 Ƈļûɓ Ŵéɓ Šïţé !!]</value>
+    <value>Club Web Site</value>
   </data>
   <data name="Scheduled for" xml:space="preserve">
-    <value>[!! 🗓️➡️ Śçhèđûļéđ ƒõŕ !!]</value>
+    <value>Scheduled for</value>
   </data>
   <data name="Abandoned" xml:space="preserve">
-    <value>[!! 🛑 Âɓãñðõñéđ !!]</value>
+    <value>Abandoned</value>
   </data>
   <data name="Helm" xml:space="preserve">
-    <value>[!! 🧭 Ĥéļm !!]</value>
+    <value>Sailor(s)</value>
   </data>
   <data name="Sail" xml:space="preserve">
-    <value>[!! ⛵ Śáïļ !!]</value>
+    <value>Sail</value>
   </data>
   <data name="Boat" xml:space="preserve">
-    <value>[!! 🚤 Bôãŧ !!]</value>
+    <value>Boat</value>
   </data>
   <data name="Stats" xml:space="preserve">
-    <value>[!! 📈 Šţãţš !!]</value>
+    <value>Stats</value>
   </data>
   <data name="All Races" xml:space="preserve">
-    <value>[!! 🏁 Ãļļ Ŕâçéŝ !!]</value>
+    <value>All Races</value>
   </data>
   <data name="All Series" xml:space="preserve">
-    <value>[!! 🏁 Ãļļ Šéŕïéŝ !!]</value>
+    <value>All Series</value>
   </data>
   <data name="Boat Name" xml:space="preserve">
-    <value>[!! 🚤 Bôãŧ Ñãmè !!]</value>
+    <value>Boat Name</value>
   </data>
   <data name="Competitor" xml:space="preserve">
-    <value>[!! 🏃 Ƈõmpéţïţõř !!]</value>
+    <value>Competitor</value>
   </data>
   <data name="competitors" xml:space="preserve">
-    <value>[!! 🏃 Ƈõmpéţïţõřŝ !!]</value>
+    <value>competitors</value>
   </data>
   <data name="discards" xml:space="preserve">
-    <value>[!! 🗑️ đïŝçãřđŝ !!]</value>
+    <value>discards</value>
   </data>
   <data name="Log in" xml:space="preserve">
-    <value>[!! 🔑 Ļõĝ ïñ !!]</value>
+    <value />
   </data>
   <data name="Name" xml:space="preserve">
-    <value>[!! Ñãmè !!]</value>
+    <value>Name</value>
   </data>
   <data name="No Competitors" xml:space="preserve">
-    <value>[!! 🚫 Ñõ Ƈõmpéţïţõřŝ !!]</value>
+    <value>No Competitors</value>
   </data>
   <data name="No races" xml:space="preserve">
-    <value>[!! 🚫 Ñõ ŕâçéŝ !!]</value>
+    <value>No races</value>
   </data>
   <data name="No recent races found." xml:space="preserve">
-    <value>[!! 🚫 Ñõ ŕéçéñţ ŕâçéŝ ƒõûñđ !!]</value>
+    <value>No recent races found</value>
   </data>
   <data name="No recent series found." xml:space="preserve">
-    <value>[!! 🚫 Ñõ ŕéçéñţ šéŕïéŝ ƒõûñđ !!]</value>
+    <value>No recent series found.</value>
   </data>
   <data name="No scheduled races found." xml:space="preserve">
-    <value>[!! 🚫 Ñõ ŝçhèđûļéđ ŕâçéŝ ƒõûñđ !!]</value>
+    <value>No scheduled races found.</value>
   </data>
   <data name="Place" xml:space="preserve">
-    <value>[!! 🏆 Pŀáçé !!]</value>
+    <value>Place</value>
   </data>
   <data name="Races" xml:space="preserve">
-    <value>[!! 🏁 Ŕâçéŝ !!]</value>
+    <value>Races</value>
   </data>
   <data name="races sailed with" xml:space="preserve">
-    <value>[!! 🏁 Ŕâçéŝ ŝâïļéđ ŵïţh !!]</value>
+    <value>races sailed with</value>
   </data>
   <data name="Recent Races" xml:space="preserve">
-    <value>[!! 🏁 Řéçéñţ Ŕâçéŝ !!]</value>
+    <value>Recent Races</value>
   </data>
   <data name="Recent Series" xml:space="preserve">
-    <value>[!! 🏁 Řéçéñţ Šéŕïéŝ !!]</value>
+    <value>Recent Series</value>
   </data>
   <data name="Sail Number" xml:space="preserve">
-    <value>[!! ⛵ Śáïļ Ñûmbéř !!]</value>
+    <value>Sail Number</value>
   </data>
   <data name="Seasons" xml:space="preserve">
-    <value>[!! 🌦️ Šéâŝõñŝ !!]</value>
+    <value>Seasons</value>
   </data>
   <data name="Series" xml:space="preserve">
-    <value>[!! 🏁 Šéŕïéŝ !!]</value>
+    <value>Series</value>
   </data>
   <data name="Total" xml:space="preserve">
-    <value>[!! 🧮 Ŧôťãļ !!]</value>
+    <value>Total</value>
   </data>
   <data name="Upcoming Races" xml:space="preserve">
-    <value>[!! 🏁 Ûpçõmïñĝ Ŕâçéŝ !!]</value>
+    <value>Upcoming Races</value>
   </data>
   <data name="Admin Page" xml:space="preserve">
-    <value>[!! 🛠️ Ãđmïñ Pâĝé !!]</value>
+    <value>Admin Page</value>
   </data>
   <data name="New Competitor" xml:space="preserve">
-    <value>[!! 🏃 Ñéŵ Ƈõmpéţïţõř !!]</value>
+    <value>New Competitor</value>
   </data>
   <data name="No seasons are set up." xml:space="preserve">
-    <value>[!! 🚫 Ñõ šéâŝõñŝ âřé ŝéţ ûp !!]</value>
+    <value>No seasons are set up.</value>
   </data>
   <data name="CapCompetitors" xml:space="preserve">
-    <value>[!! 🏃 Ƈõmpéţïţõřŝ !!]</value>
+    <value>Competitors</value>
   </data>
   <data name="Previous Day" xml:space="preserve">
-    <value>[!! ⏮️ Přévïõûŝ Đâÿ !!]</value>
+    <value>previous day</value>
   </data>
   <data name="Previous Race" xml:space="preserve">
-    <value>[!! ⏮️ Přévïõûŝ Ŕâçé !!]</value>
+    <value>previous race</value>
   </data>
   <data name="Previous Week" xml:space="preserve">
-    <value>[!! ⏮️ Přévïõûŝ Ŵéék !!]</value>
+    <value>previous week</value>
   </data>
   <data name="Rank change from" xml:space="preserve">
-    <value>[!! 🔁 Řâñk çhâñĝé ƒřõm !!]</value>
+    <value>Rank change from</value>
   </data>
   <data name="Updated" xml:space="preserve">
-    <value>[!! 🔄 Ûpđãţéđ !!]</value>
+    <value>Updated</value>
   </data>
   <data name="Change" xml:space="preserve">
-    <value>[!! 🔁 Çhàñĝé !!]</value>
+    <value>Change</value>
   </data>
   <data name="Admin" xml:space="preserve">
-    <value>[!! 🛠️ Ãđmïñ !!]</value>
+    <value>Admin</value>
   </data>
   <data name="All Boats" xml:space="preserve">
-    <value>[!! 🚤 Ãļļ Bôãŧŝ !!]</value>
+    <value>All Boats</value>
   </data>
   <data name="Boats Raced" xml:space="preserve">
-    <value>[!! 🚤 Bôãŧŝ Řâçéđ !!]</value>
+    <value>Boats Raced</value>
   </data>
   <data name="Classes" xml:space="preserve">
-    <value>[!! 🏫 Ƈļâŝŝéŝ !!]</value>
+    <value>Classes</value>
   </data>
   <data name="boats" xml:space="preserve">
-    <value>[!! 🚤 Bôãŧŝ !!]</value>
+    <value>boats</value>
   </data>
 </root>
